--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@ a {
 
 /* Navbar */
 header nav {
-    background-color: #333; 
+    background-color: #333;
 }
 
 #navbar {
@@ -63,9 +63,156 @@ header nav {
     margin: 0 0.5rem;
 }
 
-#bottom-header-inner .btn, .btn {
+#bottom-header-inner .btn,
+.btn {
     background-color: #0071e3;
     border-radius: 10rem;
     padding: .4rem 1rem;
     color: #fff;
+}
+
+/* Conteúdo */
+#ribbon {
+    text-align: center;
+    padding: 1rem;
+    background-color: #f5f5f7;
+    color: #1d1d1d;
+    font-size: 0.8rem;
+}
+
+#ribbon a {
+    color: #0071e3;
+}
+
+#main-content {
+    text-align: center;
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#main-content #title {
+    margin: 1rem;
+    font-size: 1.2rem;
+}
+
+#main-content #subtitle {
+    margin: 1rem;
+    font-size: 4rem;
+    font-weight: bold;
+}
+
+#main-content #description {
+    max-width: 600px;
+    margin: 1rem auto;
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+}
+
+#main-content #price {
+    font-size: 1.3rem;
+    color: #86868b;
+    margin: 2rem;
+}
+
+#main-content .btn {
+    font-size: 1.1rem;
+    padding: 0.8rem 1.4rem;
+    align-self: center;
+}
+
+#main-content #produc-image {
+    max-width: 1000px;
+    margin: 3rem auto;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+#main-content #produc-image.changing {
+    opacity: 0.5;
+}
+
+#image-picker {
+    margin-bottom: 500px;
+}
+
+#image-picker ul {
+    display: flex;
+    justify-content: center;
+}
+
+#image-picker li {
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+}
+
+#image-picker li .color {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    box-shadow: 1px 1px 1px;
+    border: 4px solid #fff;
+    pointer-events: none;
+}
+
+#image-picker .description {
+    font-size: 0.7rem;
+    color: #1d1d1d;
+    margin-top: 0.6rem;
+}
+
+#green .color {
+    background-color: #394c38;
+}
+
+#silver .color {
+    background-color: #f1f2ed;
+}
+
+#golden .color {
+    background-color: #fae7cf;
+}
+
+#grafite .color {
+    background-color: #54524f;
+}
+
+#blue .color {
+    background-color: #a7c1d9;
+}
+
+.selected {
+    outline: 2px solid #43a1ff;
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+    #navbar li {
+        display: none;
+    }
+
+    #navbar #logo {
+        display: flex;
+    }
+
+    #bottom-header-links a {
+        display: none;
+    }
+
+    #bottom-header-links .btn {
+        display: flex;
+    }
+
+    #main-content {
+        padding: 2rem;
+        overflow: hidden;
+    }
+
+    #main-content #subtitle {
+        font-size: 3rem;
+    }
 }
